[gd_scene load_steps=10 format=3 uid="uid://bikqnlk1yih0x"]

[ext_resource type="Texture2D" uid="uid://di7xabl33fr4m" path="res://Assets/Sprites/UI/Notes.png" id="1_26dxe"]
[ext_resource type="Script" path="res://UI/BookUI/book_ui.gd" id="1_hi1nf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ilm3w"]
atlas = ExtResource("1_26dxe")
region = Rect2(2.08165e-12, 2.08165e-12, 192, 108)
margin = Rect2(2.08165e-12, 2.08165e-12, 2.08165e-12, 2.08165e-12)

[sub_resource type="Animation" id="Animation_8bfof"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BookTexture:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BookTexture:texture:region")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(2.08165e-12, 2.08165e-12, 192, 108)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BookTexture:texture:margin")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(2.08165e-12, 2.08165e-12, 2.08165e-12, 2.08165e-12)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LeftPage:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("RightPage:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_sy5ts"]
resource_name = "Land"
length = 1.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BookTexture:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BookTexture:texture:region")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(2.08165e-12, 2.08165e-12, 192, 108), Rect2(192, 2.08165e-12, 192, 108), Rect2(384, 2.08165e-12, 192, 108), Rect2(576, 2.08165e-12, 192, 108), Rect2(768, 2.08165e-12, 192, 108), Rect2(960, 2.08165e-12, 192, 108), Rect2(1152, 2.08165e-12, 192, 108), Rect2(1344, 2.08165e-12, 192, 108), Rect2(1536, 2.08165e-12, 192, 108), Rect2(1728, 2.08165e-12, 192, 108), Rect2(1920, 2.08165e-12, 192, 108), Rect2(2112, 2.08165e-12, 192, 108), Rect2(2304, 2.08165e-12, 192, 108), Rect2(2496, 2.08165e-12, 192, 108), Rect2(2688, 2.08165e-12, 192, 108), Rect2(2880, 2.08165e-12, 192, 108), Rect2(3072, 2.08165e-12, 192, 108), Rect2(3264, 2.08165e-12, 192, 108)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BookTexture:texture:margin")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(2.08165e-12, 2.08165e-12, 2.08165e-12, 2.08165e-12)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LeftPage:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("RightPage:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_4ngws"]
resource_name = "PutAway"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BookTexture:texture:region")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(3264, 2.08165e-12, 192, 108)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BookTexture:texture:margin")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Rect2(2.08165e-12, 2.08165e-12, 2.08165e-12, 2.08165e-12), Rect2(2.08165e-12, -10, 2.08165e-12, 2.08165e-12), Rect2(2.08165e-12, 400, 2.08165e-12, 2.08165e-12)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LeftPage:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RightPage:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ico1j"]
resource_name = "TurnPage"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BookTexture:texture:region")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(3264, 2.08165e-12, 192, 108), Rect2(3456, 2.08165e-12, 192, 108), Rect2(3648, 2.08165e-12, 192, 108), Rect2(3840, 2.08165e-12, 192, 108), Rect2(3264, 2.08165e-12, 192, 108)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.15),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [false],
"method": &"nextRight"
}, {
"args": [false],
"method": &"nextLeft"
}]
}

[sub_resource type="Animation" id="Animation_4fm1i"]
resource_name = "TurnPageBack"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BookTexture:texture:region")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(3264, 2.08165e-12, 192, 108), Rect2(3840, 2.08165e-12, 192, 108), Rect2(3648, 2.08165e-12, 192, 108), Rect2(3456, 2.08165e-12, 192, 108), Rect2(3264, 2.08165e-12, 192, 108)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.15),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"nextLeft"
}, {
"args": [true],
"method": &"nextRight"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b75ym"]
_data = {
"Land": SubResource("Animation_sy5ts"),
"PutAway": SubResource("Animation_4ngws"),
"RESET": SubResource("Animation_8bfof"),
"TurnPage": SubResource("Animation_ico1j"),
"TurnPageBack": SubResource("Animation_4fm1i")
}

[node name="BookUI" type="CanvasLayer"]
script = ExtResource("1_hi1nf")

[node name="BookTexture" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(960, 540)
texture = SubResource("AtlasTexture_ilm3w")

[node name="LeftPage" type="RichTextLabel" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.15
anchor_right = 0.48
anchor_bottom = 0.85
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.286275)
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 32
theme_override_font_sizes/bold_font_size = 32
theme_override_font_sizes/italics_font_size = 32
theme_override_font_sizes/bold_italics_font_size = 32
theme_override_font_sizes/mono_font_size = 32
bbcode_enabled = true
text = "TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST "
scroll_active = false

[node name="RightPage" type="RichTextLabel" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.52
anchor_top = 0.15
anchor_right = 0.8
anchor_bottom = 0.85
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.286275)
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 32
theme_override_font_sizes/bold_font_size = 32
theme_override_font_sizes/italics_font_size = 32
theme_override_font_sizes/bold_italics_font_size = 32
theme_override_font_sizes/mono_font_size = 32
text = "TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST "

[node name="BookAnimator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_b75ym")
}
